--- a/html/readme.html
+++ b/html/readme.html
@@ -11,6 +11,7 @@
 	  border: 1px solid #000000;
       }
       table th,td {
+          margin: 3px;
 	  border: 1px solid #000000;
       }
     </style>
@@ -25,30 +26,38 @@
       <table>
 	<tr><th>0x000〜0x005</th><td>UECS-ID</td></tr>
 	<tr><th>0x006〜0x00b</th><td>MACアドレス</td></tr>
-	<tr><th>0x00c</th><td>0xff=DHCP<br>0x00=固定IP</td></tr>
+	<tr><th>0x00c</th>
+          <td>
+            bit[0]
+            <ul>
+              <li>1:DHCP</li>
+              <li>0:固定IP</li>
+            </ul>
+          </td>
+        </tr>
 	<tr><th>0x00d〜0x00f</th><td>予約(0xff)</td></tr>
 	<tr><th>0x010〜0x013</th><td>IPアドレス (固定IPの場合)</td></tr>
 	<tr><th>0x014〜0x017</th><td>Subnet mask アドレス (固定IPの場合)</td></tr>
 	<tr><th>0x018〜0x01b</th><td>Default Gateway アドレス (固定IPの場合)</td></tr>
 	<tr><th>0x01c〜0x01f</th><td>DNSサーバアドレス (固定IPの場合)</td></tr>
+        <tr><th>0x020〜0x02f</th><td>機種名称</td></tr>
+        <tr><th>0x030〜0x03f</th><td>ベンダー名称</td></tr>
       </table>
     </blockquote>
     <h2>CCM typeを記録するメモリマップ (CCMmap1)</h2>
-    <p>0x080〜0x2ff<br>
+    <p>0x080〜0x180<br>
       32bytes/1record<br>
-      00=cnd が約束</p>
+      0x80 &Rarr; cnd が約束</p>
     <blockquote>
       <table>
-	<tr><th>byte位置</th><th>意味、ビット割付</th></tr>
+	<tr><th>byte位置</th><th>意味、ビット割付 [..]</th></tr>
 	<tr><th>00</th>
 	  <td>
-	    <blockquote>
-	      bit[0]
-	      <ul>
-		<li>enable=1</li>
-		<li>disable0</li>
-	      </ul>
-	    </blockquote>
+	    bit[0]
+	    <ul>
+	      <li>1: enable</li>
+	      <li>0: disable</li>
+	    </ul>
 	  </td>
 	</tr>
 	<tr><th>01</th><td>room (0〜127)</td></tr>
@@ -58,26 +67,38 @@
 	<tr><th>06-25</th><td>ccm type名</td></tr>
 	<tr><th>26</th>
 	  <td>itvl 送信インターバル
-	    <blockquote>
-	      itvl[0:1]
-	      <ul>
-		<li>00=受信専用CCMのため送信しない</li>
-		<li>01=A</li>
-		<li>10=B</li>
-		<li>11=S</li>
-	      </ul>
-	      itvl[2:6]
-	      <ul>
-		<li>00001=1S</li>
-		<li>00010=10S</li>
-		<li>00100=1M</li>
-	      </ul>
-	      itvl[7]
-	      <ul>
-		<li>0 値変化時に送信しない</li>
-		<li>1 値変化時に送信する</li>
-	      </ul>
-	    </blockquote>
+	    itvl[0:1]
+	    <ul>
+	      <li>00: 受信専用CCMのため送信しない</li>
+	      <li>01: A</li>
+	      <li>10: B</li>
+	      <li>11: S</li>
+	    </ul>
+	    itvl[2:6]
+	    <ul>
+              <li>00000: N/A</li>
+	      <li>00001: 1S</li>
+	      <li>00010: 10S</li>
+	      <li>00100: 1M</li>
+	    </ul>
+	    itvl[7]
+	    <ul>
+	      <li>0: 値変化時に送信しない</li>
+	      <li>1: 値変化時に送信する</li>
+	    </ul>
+            <p>例</p>
+            <ul>
+              <li>A-1S-0の場合には以下のようになる。<br>
+                <cite>
+                  01-00001-0 &rarr; 0b01000010 &rarr; 0x42 
+                </cite>
+              </li>
+              <li>B-1の場合には以下のようになる。<br>
+                <cite>
+                  10-00000-1 &rarr; 0b10000001 &rarr; 0x81
+                </cite>
+              </li>
+            </ul>
 	  </td>
 	</tr>
 	<tr><th>27-31</th><td>予約</td></tr>
